[gd_scene load_steps=19 format=2]

[ext_resource path="res://art/models/foliage/Pots and plants/Plants.material" type="Material" id=1]
[ext_resource path="res://maps/decorations/small plants/Grass.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 6 )
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=17]
albedo_color = Color( 0, 0.109804, 1, 1 )

[sub_resource type="CylinderMesh" id=18]
material = SubResource( 17 )
top_radius = 5.0
bottom_radius = 5.0
height = 0.2

[sub_resource type="ArrayMesh" id=1]
resource_name = "Grass_01_Plane001"
surfaces/0 = {
"aabb": AABB( -0.866025, 0, -0.5, 1.73205, 2.00001, 1.50001 ),
"array_data": PoolByteArray( 106, 33, 162, 179, 0, 0, 0, 64, 0, 0, 128, 63, 126, 0, 127, 127, 129, 38, 91, 37, 105, 33, 162, 51, 0, 0, 0, 0, 0, 0, 128, 63, 126, 0, 127, 127, 129, 38, 132, 53, 214, 179, 93, 191, 0, 0, 0, 64, 2, 0, 0, 191, 126, 80, 129, 86, 158, 53, 91, 37, 213, 179, 93, 191, 0, 0, 128, 51, 4, 0, 0, 191, 126, 80, 129, 86, 158, 53, 132, 53, 106, 33, 162, 179, 0, 0, 0, 64, 0, 0, 0, 128, 129, 176, 127, 216, 6, 50, 91, 37, 106, 33, 162, 179, 0, 0, 0, 64, 0, 0, 0, 128, 126, 80, 129, 86, 6, 50, 91, 37, 106, 33, 162, 179, 0, 0, 0, 64, 0, 0, 0, 128, 126, 0, 127, 127, 6, 50, 91, 37, 105, 33, 162, 51, 0, 0, 0, 0, 0, 0, 0, 128, 129, 176, 126, 170, 6, 50, 132, 53, 105, 33, 162, 51, 0, 0, 0, 0, 0, 0, 0, 128, 126, 80, 129, 86, 6, 50, 132, 53, 105, 33, 162, 51, 0, 0, 0, 0, 0, 0, 0, 128, 126, 0, 127, 127, 6, 50, 132, 53, 212, 179, 93, 63, 255, 255, 255, 63, 2, 0, 0, 191, 129, 176, 126, 216, 158, 53, 91, 37, 215, 179, 93, 63, 0, 0, 64, 52, 4, 0, 0, 191, 129, 176, 126, 170, 158, 53, 132, 53 ),
"array_index_data": PoolByteArray( 5, 0, 3, 0, 8, 0, 5, 0, 2, 0, 3, 0, 0, 0, 9, 0, 1, 0, 0, 0, 6, 0, 9, 0, 4, 0, 11, 0, 10, 0, 4, 0, 7, 0, 11, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 18,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 12
}

[sub_resource type="MultiMesh" id=7]
resource_local_to_scene = true
transform_format = 1
mesh = SubResource( 1 )

[sub_resource type="ArrayMesh" id=3]
resource_name = "Grass_02_Plane007"
surfaces/0 = {
"aabb": AABB( -1.01, 3.7749e-08, -0.51, 1.02, 1e-05, 1.02001 ),
"array_data": PoolByteArray( 174, 71, 129, 191, 105, 33, 34, 51, 93, 143, 2, 63, 0, 127, 127, 126, 64, 37, 123, 55, 64, 215, 35, 60, 105, 33, 34, 51, 93, 143, 2, 63, 0, 127, 127, 127, 64, 37, 116, 57, 174, 71, 129, 191, 105, 33, 34, 51, 93, 143, 2, 191, 0, 127, 127, 126, 133, 51, 123, 55, 64, 215, 35, 60, 105, 33, 34, 51, 93, 143, 2, 191, 0, 127, 127, 126, 133, 51, 116, 57 ),
"array_index_data": PoolByteArray( 0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 6,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="MultiMesh" id=8]
resource_local_to_scene = true
transform_format = 1
mesh = SubResource( 3 )

[sub_resource type="ArrayMesh" id=11]
resource_name = "Flower2_Plane003"
surfaces/0 = {
"aabb": AABB( -0.180128, 0, -0.115784, 0.360256, 0.760847, 0.231568 ),
"array_data": PoolByteArray( 156, 165, 12, 178, 20, 152, 29, 63, 246, 19, 222, 61, 127, 0, 126, 1, 154, 58, 237, 55, 157, 165, 12, 50, 0, 0, 0, 0, 246, 19, 222, 61, 127, 0, 126, 1, 154, 58, 220, 59, 61, 83, 192, 189, 20, 152, 29, 63, 249, 19, 94, 189, 127, 80, 129, 86, 219, 59, 237, 55, 60, 83, 192, 189, 0, 0, 0, 51, 252, 19, 94, 189, 127, 80, 129, 86, 219, 59, 220, 59, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 129, 80, 126, 170, 59, 59, 237, 55, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 127, 80, 129, 86, 59, 59, 237, 55, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 127, 0, 127, 127, 59, 59, 237, 55, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 129, 80, 126, 170, 59, 59, 220, 59, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 127, 80, 129, 86, 59, 59, 220, 59, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 127, 0, 126, 1, 59, 59, 220, 59, 59, 83, 192, 61, 20, 152, 29, 63, 249, 19, 94, 189, 129, 80, 127, 170, 219, 59, 237, 55, 61, 83, 192, 61, 0, 0, 192, 51, 252, 19, 94, 189, 129, 80, 126, 170, 219, 59, 220, 59, 113, 115, 56, 190, 128, 65, 248, 62, 38, 32, 237, 61, 0, 57, 126, 63, 197, 53, 69, 56, 113, 115, 56, 62, 128, 65, 248, 62, 36, 32, 237, 61, 0, 57, 126, 63, 218, 56, 69, 56, 113, 115, 56, 190, 216, 198, 66, 63, 36, 32, 237, 189, 0, 57, 126, 63, 197, 53, 157, 52, 113, 115, 56, 62, 216, 198, 66, 63, 38, 32, 237, 189, 0, 57, 126, 63, 218, 56, 157, 52 ),
"array_index_data": PoolByteArray( 5, 0, 3, 0, 8, 0, 5, 0, 2, 0, 3, 0, 0, 0, 9, 0, 1, 0, 0, 0, 6, 0, 9, 0, 4, 0, 11, 0, 10, 0, 4, 0, 7, 0, 11, 0, 12, 0, 15, 0, 13, 0, 12, 0, 14, 0, 15, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 24,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}

[sub_resource type="MultiMesh" id=14]
resource_local_to_scene = true
transform_format = 1
mesh = SubResource( 11 )

[sub_resource type="ArrayMesh" id=12]
resource_name = "Flower3_Plane004"
surfaces/0 = {
"aabb": AABB( -0.180128, 0, -0.115784, 0.360256, 0.760847, 0.231568 ),
"array_data": PoolByteArray( 156, 165, 12, 178, 20, 152, 29, 63, 246, 19, 222, 61, 127, 0, 126, 1, 154, 58, 237, 55, 157, 165, 12, 50, 0, 0, 0, 0, 246, 19, 222, 61, 127, 0, 126, 1, 154, 58, 220, 59, 61, 83, 192, 189, 20, 152, 29, 63, 249, 19, 94, 189, 127, 80, 129, 86, 219, 59, 237, 55, 60, 83, 192, 189, 0, 0, 0, 51, 252, 19, 94, 189, 127, 80, 129, 86, 219, 59, 220, 59, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 129, 80, 126, 170, 59, 59, 237, 55, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 127, 80, 129, 86, 59, 59, 237, 55, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 127, 0, 127, 127, 59, 59, 237, 55, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 129, 80, 126, 170, 59, 59, 220, 59, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 127, 80, 129, 86, 59, 59, 220, 59, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 127, 0, 126, 1, 59, 59, 220, 59, 59, 83, 192, 61, 20, 152, 29, 63, 249, 19, 94, 189, 129, 80, 127, 170, 219, 59, 237, 55, 61, 83, 192, 61, 0, 0, 192, 51, 252, 19, 94, 189, 129, 80, 126, 170, 219, 59, 220, 59, 113, 115, 56, 190, 128, 65, 248, 62, 38, 32, 237, 61, 0, 57, 126, 63, 199, 53, 117, 52, 113, 115, 56, 62, 128, 65, 248, 62, 36, 32, 237, 61, 0, 57, 126, 63, 224, 56, 117, 52, 113, 115, 56, 190, 216, 198, 66, 63, 36, 32, 237, 189, 0, 57, 126, 63, 199, 53, 203, 39, 113, 115, 56, 62, 216, 198, 66, 63, 38, 32, 237, 189, 0, 57, 126, 63, 224, 56, 203, 39 ),
"array_index_data": PoolByteArray( 5, 0, 3, 0, 8, 0, 5, 0, 2, 0, 3, 0, 0, 0, 9, 0, 1, 0, 0, 0, 6, 0, 9, 0, 4, 0, 11, 0, 10, 0, 4, 0, 7, 0, 11, 0, 12, 0, 15, 0, 13, 0, 12, 0, 14, 0, 15, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 24,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}

[sub_resource type="MultiMesh" id=9]
resource_local_to_scene = true
transform_format = 1
mesh = SubResource( 12 )

[sub_resource type="ArrayMesh" id=10]
resource_name = "Flower1_Plane002"
surfaces/0 = {
"aabb": AABB( -0.180128, 0, -0.115784, 0.360256, 0.760847, 0.231568 ),
"array_data": PoolByteArray( 156, 165, 12, 178, 20, 152, 29, 63, 246, 19, 222, 61, 127, 0, 126, 1, 154, 58, 237, 55, 157, 165, 12, 50, 0, 0, 0, 0, 246, 19, 222, 61, 127, 0, 126, 1, 154, 58, 220, 59, 61, 83, 192, 189, 20, 152, 29, 63, 249, 19, 94, 189, 127, 80, 129, 86, 219, 59, 237, 55, 60, 83, 192, 189, 0, 0, 0, 51, 252, 19, 94, 189, 127, 80, 129, 86, 219, 59, 220, 59, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 129, 80, 126, 170, 59, 59, 237, 55, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 127, 80, 129, 86, 59, 59, 237, 55, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 127, 0, 127, 127, 59, 59, 237, 55, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 129, 80, 126, 170, 59, 59, 220, 59, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 127, 80, 129, 86, 59, 59, 220, 59, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 127, 0, 126, 1, 59, 59, 220, 59, 59, 83, 192, 61, 20, 152, 29, 63, 249, 19, 94, 189, 129, 80, 127, 170, 219, 59, 237, 55, 61, 83, 192, 61, 0, 0, 192, 51, 252, 19, 94, 189, 129, 80, 126, 170, 219, 59, 220, 59, 113, 115, 56, 190, 128, 65, 248, 62, 38, 32, 237, 61, 0, 57, 126, 63, 6, 53, 219, 59, 113, 115, 56, 62, 128, 65, 248, 62, 36, 32, 237, 61, 0, 57, 126, 63, 157, 56, 219, 59, 113, 115, 56, 190, 216, 198, 66, 63, 36, 32, 237, 189, 0, 57, 126, 63, 6, 53, 193, 57, 113, 115, 56, 62, 216, 198, 66, 63, 38, 32, 237, 189, 0, 57, 126, 63, 157, 56, 193, 57 ),
"array_index_data": PoolByteArray( 5, 0, 3, 0, 8, 0, 5, 0, 2, 0, 3, 0, 0, 0, 9, 0, 1, 0, 0, 0, 6, 0, 9, 0, 4, 0, 11, 0, 10, 0, 4, 0, 7, 0, 11, 0, 12, 0, 15, 0, 13, 0, 12, 0, 14, 0, 15, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 24,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}

[sub_resource type="MultiMesh" id=15]
resource_local_to_scene = true
transform_format = 1
mesh = SubResource( 10 )

[sub_resource type="ArrayMesh" id=13]
resource_name = "Lily_Plane006"
surfaces/0 = {
"aabb": AABB( -0.37778, 0, -0.164489, 0.755561, 0.622861, 0.755561 ),
"array_data": PoolByteArray( 156, 165, 12, 178, 20, 152, 29, 63, 246, 19, 222, 61, 127, 0, 0, 127, 105, 58, 89, 56, 157, 165, 12, 50, 0, 0, 0, 0, 246, 19, 222, 61, 127, 0, 0, 127, 195, 53, 89, 56, 61, 83, 192, 189, 20, 152, 29, 63, 249, 19, 94, 189, 127, 80, 0, 127, 105, 58, 170, 57, 60, 83, 192, 189, 0, 0, 0, 51, 252, 19, 94, 189, 127, 80, 0, 126, 195, 53, 170, 57, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 129, 80, 0, 129, 105, 58, 1, 57, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 127, 80, 0, 127, 105, 58, 1, 57, 156, 165, 12, 178, 20, 152, 29, 63, 0, 0, 0, 128, 127, 0, 0, 127, 105, 58, 1, 57, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 129, 80, 0, 130, 195, 53, 1, 57, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 127, 80, 0, 126, 195, 53, 1, 57, 157, 165, 12, 50, 0, 0, 0, 0, 0, 0, 0, 128, 127, 0, 0, 127, 195, 53, 1, 57, 59, 83, 192, 61, 20, 152, 29, 63, 249, 19, 94, 189, 129, 80, 0, 129, 105, 58, 170, 57, 61, 83, 192, 61, 0, 0, 192, 51, 252, 19, 94, 189, 129, 80, 0, 130, 195, 53, 170, 57, 111, 108, 193, 190, 204, 115, 31, 63, 119, 80, 23, 63, 0, 127, 127, 63, 249, 56, 136, 54, 111, 108, 193, 62, 204, 115, 31, 63, 119, 80, 23, 63, 0, 127, 127, 63, 225, 59, 136, 54, 111, 108, 193, 190, 204, 115, 31, 63, 223, 111, 40, 190, 0, 127, 127, 63, 249, 56, 196, 41, 111, 108, 193, 62, 204, 115, 31, 63, 223, 111, 40, 190, 0, 127, 127, 63, 225, 59, 196, 41 ),
"array_index_data": PoolByteArray( 5, 0, 3, 0, 8, 0, 5, 0, 2, 0, 3, 0, 0, 0, 9, 0, 1, 0, 0, 0, 6, 0, 9, 0, 4, 0, 11, 0, 10, 0, 4, 0, 7, 0, 11, 0, 12, 0, 15, 0, 13, 0, 12, 0, 14, 0, 15, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 24,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}

[sub_resource type="MultiMesh" id=16]
resource_local_to_scene = true
transform_format = 1
mesh = SubResource( 13 )

[node name="grass" type="Spatial"]
script = ExtResource( 2 )

[node name="defaultSurface" type="MeshInstance" parent="."]
mesh = SubResource( 5 )
material/0 = null

[node name="defaultSurface2" type="MeshInstance" parent="defaultSurface"]
mesh = SubResource( 18 )
skeleton = NodePath("../..")
material/0 = null

[node name="MultiMeshGrassBig" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 7 )

[node name="MultiMeshGrassSmall" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 8 )

[node name="MultiMeshFlowerRed" type="MultiMeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
multimesh = SubResource( 14 )

[node name="MultiMeshFlowerBlue" type="MultiMeshInstance" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
multimesh = SubResource( 9 )

[node name="MultiMeshFlowerGreen" type="MultiMeshInstance" parent="."]
transform = Transform( 1.75, 0, 0, 0, 1.75, 0, 0, 0, 1.75, 0, 0, 0 )
multimesh = SubResource( 15 )

[node name="MultiMeshLily" type="MultiMeshInstance" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
multimesh = SubResource( 16 )
